--- a/widescreen.css
+++ b/widescreen.css
@@ -19,3 +19,35 @@
 #contact .map {
     flex: 2;
 }
+
+
+
+
+/* More #what hover txt */
+#what .items .item2 {
+    display: flex;
+    text-align: left;
+}
+
+/* Position Icons */
+
+#what .items .item2 i {
+    margin-right: 1.3rem;
+    align-self: center;
+    margin-bottom: 0;
+}
+
+
+
+#what .items .item3 {
+    display: flex;
+    text-align: left;
+}
+
+/* Position Icons */
+
+#what .items .item3 i {
+    margin-right: 1.3rem;
+    align-self: center;
+    margin-bottom: 0;
+}
